--- a/layouts/admin/index.html.twig
+++ b/layouts/admin/index.html.twig
@@ -6,7 +6,7 @@
   <title>{{ page.title|default('Content Manager') }}</title>
   <link rel="stylesheet" href="https://unpkg.com/netlify-cms@{{ site.netlify.cms.version|default('latest') }}/dist/cms.css" />
 </head>
-<body class="layout-reverse theme-base-0b">
+<body>
   <script src="https://unpkg.com/netlify-cms@{{ site.netlify.cms.version|default('latest') }}/dist/netlify-cms.js"></script>
   <script src="https://identity-js.netlify.com/{{ site.netlify.identity.version|default('v1') }}/netlify-identity-widget.js"></script>
   <script>
