trying another fix for bodyclass

--- a/layouts/blog/page.html.twig
+++ b/layouts/blog/page.html.twig
@@ -1,4 +1,4 @@
-{% extends '../default.page.html.twig' %}
+{% extends './default.page.html.twig' %}
 
 {% block content %}
       <h1 class="page-title">{{ page.title }}</h1>
