--- a/layouts/_default/list.html.twig
+++ b/layouts/_default/list.html.twig
@@ -17,7 +17,7 @@
             <a href="{{ url(p) }}">{{ p.title|e }}</a>
           </h2>
           <span class="page-date">{{ p.date|date("j M Y") }}</span>
-          {{ p.content|excerptHtml }}..
+          {{ p.content|excerptHtml }}
           
           <p><strong>Read more: <a href="{{ url(p) }}">{{ p.title|e }}</a></strong></p>
         </div>
