--- a/layouts/_default/page.html.twig
+++ b/layouts/_default/page.html.twig
@@ -31,7 +31,7 @@
         </div>
         <nav class="sidebar-nav">
 {% if site.menus.main is defined %}
-{% for menu in site.menus.main|sortByWeight %}
+{% for menu in site.menus.main|sort_by_weight %}
           <a class="sidebar-nav-item{% if url(page) == url(menu.url) %} active{% endif %} item-weight-{{ menu.weight }}" href="{{ url(menu.url) }}">{{ menu.name }}</a>
 {% endfor %}
 {% endif %}
